--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,14 @@
       <compilation debug="true" targetFramework="4.6.2"/>
       <httpRuntime targetFramework="4.6.2"/>
     </system.web>
+  
+   <system.webServer>
+    <staticContent>
+      <clientCache cacheControlMode="UseExpires"
+         httpExpires="Tue, 11 Aug 2020 00:00:01 GMT" />
+    </staticContent>
+    </system.webServer>
+  
     <system.codedom>
         <compilers>
             <compiler language="c#;cs;csharp" extension=".cs"
